--- a/environments/india/inventory.ini
+++ b/environments/india/inventory.ini
@@ -16,6 +16,10 @@
 10.203.10.63 hostname=airflow1-india ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3
 [celery1]
 10.203.10.13 hostname=celery1-india ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3 swap_size=4G
+[celery2]
+10.203.10.117 hostname=celery2-india ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3 swap_size=4G
+[celery3]
+10.203.10.197 hostname=celery3-india ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3 swap_size=4G
 [couch5]
 10.203.40.178 hostname=couch5-india ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3 datavol_device=/dev/sdf datavol_device1=/dev/sdf is_datavol_ebsnvme=yes swap_size=8G
 [couch6]
@@ -75,6 +79,8 @@ kafka1
 
 [celery:children]
 celery1
+celery2
+celery3
 
 [pillowtop:children]
 pillow2
