--- a/environments/india/terraform.yml
+++ b/environments/india/terraform.yml
@@ -83,6 +83,20 @@ servers:
     volume_size: 30
     group: celery
     os: bionic
+  - server_name: "celery2-india"
+    server_instance_type: "t3.large"
+    network_tier: "app-private"
+    az: "a"
+    volume_size: 30
+    group: celery
+    os: bionic
+  - server_name: "celery3-india"
+    server_instance_type: "t3.large"
+    network_tier: "app-private"
+    az: "a"
+    volume_size: 30
+    group: celery
+    os: bionic
 
   - server_name: "couch5-india"
     server_instance_type: "c5.2xlarge"
