--- a/environments/production/terraform.yml
+++ b/environments/production/terraform.yml
@@ -72,6 +72,20 @@ servers:
     volume_size: 40
     group: "hq_webworkers"
     os: bionic
+  - server_name: "web3-production"
+    server_instance_type: m5.2xlarge
+    network_tier: "app-private"
+    az: "a"
+    volume_size: 40
+    group: "hq_webworkers"
+    os: bionic
+  - server_name: "web4-production"
+    server_instance_type: m5.2xlarge
+    network_tier: "app-private"
+    az: "a"
+    volume_size: 40
+    group: "hq_webworkers"
+    os: bionic
     
   - server_name: "web6-production"
     server_instance_type: m5.2xlarge
@@ -101,6 +115,35 @@ servers:
     volume_size: 40
     group: "mobile_webworkers"
     os: trusty
+  - server_name: "web10-production"
+    server_instance_type: m5.2xlarge
+    network_tier: "app-private"
+    az: "b"
+    volume_size: 40
+    group: "mobile_webworkers"
+    os: bionic
+  - server_name: "web11-production"
+    server_instance_type: m5.2xlarge
+    network_tier: "app-private"
+    az: "b"
+    volume_size: 40
+    group: "mobile_webworkers"
+    os: bionic
+  - server_name: "web12-production"
+    server_instance_type: m5.2xlarge
+    network_tier: "app-private"
+    az: "b"
+    volume_size: 40
+    group: "mobile_webworkers"
+    os: bionic
+  - server_name: "web13-production"
+    server_instance_type: m5.2xlarge
+    network_tier: "app-private"
+    az: "a"
+    volume_size: 40
+    group: "mobile_webworkers"
+    os: bionic
+
 
   - server_name: "esmaster0-production"
     server_instance_type: t3.large
