--- a/environments/india/app-processes.yml
+++ b/environments/india/app-processes.yml
@@ -2,10 +2,10 @@ formplayer_memory: "7000m"
 newrelic_javaagent: True
 management_commands:
   celery1:
-    submission_reprocessing_queue:
+    run_submission_reprocessing_queue:
     queue_schedule_instances:
     handle_survey_actions:
-    sms_queue:
+    run_sms_queue:
 celery_processes:
   celery1:
     beat: {}
