--- a/environments/icds-cas/app-processes.yml
+++ b/environments/icds-cas/app-processes.yml
@@ -8,12 +8,12 @@ celery_heartbeat_thresholds:
 
 management_commands:
   celery0:
-    submission_reprocessing_queue:
+    run_submission_reprocessing_queue:
   celery1:
     queue_schedule_instances:
     handle_survey_actions:
   celery5:
-    sms_queue:
+    run_sms_queue:
 
 celery_processes:
   None:
