--- a/environments/icds-new/app-processes.yml
+++ b/environments/icds-new/app-processes.yml
@@ -4,12 +4,12 @@ formplayer_memory: "8000m"
 gunicorn_workers_static_factor: 4
 management_commands:
   celery0:
-    submission_reprocessing_queue:
+    run_submission_reprocessing_queue:
   celery1:
     queue_schedule_instances:
     handle_survey_actions:
   web0:
-    sms_queue:
+    run_sms_queue:
 celery_processes:
   None:
     repeat_record_queue:
