--- a/environments/production/app-processes.yml
+++ b/environments/production/app-processes.yml
@@ -7,10 +7,10 @@ gunicorn_workers_static_factor: 0
 gunicorn_workers_factor: 1
 management_commands:
   celery12:
-    submission_reprocessing_queue:
+    run_submission_reprocessing_queue:
     queue_schedule_instances:
     handle_survey_actions:
-    sms_queue:
+    run_sms_queue:
 celery_processes:
   celery9,celery10,celery11:
     analytics_queue:
