--- a/src/commcare_cloud/ansible/setup_pg_logical_replication.yml
+++ b/src/commcare_cloud/ansible/setup_pg_logical_replication.yml
@@ -174,6 +174,32 @@
         msg: "{{ result.results | reject(\"skipped\") | map(attribute=\"query_result\") | list }}"
       when: result.results | reject("skipped") | map(attribute="query_result") | list
       tags: status
+    - name: Query row count (provider)
+      postgresql_query:
+        db: '{{ item.source_db_name }}'
+        query: "select count(*) from form_processor_ledgervalue"
+      loop: "{{ replications | unique(attribute=\"source_host\") }}"
+      when: item.source_host == inventory_hostname
+      register: result
+      tags: status
+    - name: All provider rows
+      debug:
+        msg: "{{ result.results | reject(\"skipped\") | map(attribute=\"query_result\")  | first | map(attribute=\"count\") | first }}"
+      when: result.results | reject("skipped") | map(attribute="query_result") | list
+      tags: status
+    - name: Query row count (sub)
+      postgresql_query:
+        db: '{{ item.target_db_name }}'
+        query: "select count(*) from form_processor_ledgervalue"
+      loop: "{{ replications }}"
+      when: item.target_host == inventory_hostname
+      register: result
+      tags: status
+    - name: All subscriber status
+      debug:
+        msg: "{{ result.results | reject(\"skipped\") | map(attribute=\"query_result\")  | first | map(attribute=\"count\") | first }}"
+      when: result.results | reject("skipped") | map(attribute="query_result") | list
+      tags: status
 
 # synchronize sequences
 - hosts:
