--- a/src/commcare_cloud/ansible/group_vars/all.yml
+++ b/src/commcare_cloud/ansible/group_vars/all.yml
@@ -57,9 +57,9 @@ s3_bulk_delete_chunksize: 1000
 
 # For instructions on S3-to-S3 migrations, see docs/howto/migrate-s3-to-s3.md
 # or http://dimagi.github.io/commcare-cloud/howto/migrate-s3-to-s3
-old_s3_blob_db_url: "http://{{ groups['proxy'][0] }}:{{ riakcs_proxy_port }}"
-old_s3_blob_db_s3_bucket: 'blobdb'
-old_s3_bulk_delete_chunksize: 1000
+old_s3_blob_db_url: ~
+old_s3_blob_db_s3_bucket: ~
+old_s3_bulk_delete_chunksize: ~
 
 # To use these vars without deploying the riak control machine
 # add riakcs_s3_access_key and riakcs_s3_secret_key to the ansible secret config directory
