make form_feed + pillow_retry_queue use management command route

--- a/environments/pna/app-processes.yml
+++ b/environments/pna/app-processes.yml
@@ -2,6 +2,8 @@ formplayer_memory: "1024m"
 
 management_commands:
   pnaserver1:
+    run_form_websocket_feed:
+    run_pillow_retry_queue:
 celery_processes:
   'pnaserver1':
     repeat_record_queue:
