--- a/environments/icds-cas/app-processes.yml
+++ b/environments/icds-cas/app-processes.yml
@@ -14,6 +14,9 @@ management_commands:
     handle_survey_actions:
   celery5:
     run_sms_queue:
+  pillow21:
+    run_form_websocket_feed:
+    run_pillow_retry_queue:
 
 celery_processes:
   None:
