--- a/environments/icds-new/app-processes.yml
+++ b/environments/icds-new/app-processes.yml
@@ -10,6 +10,9 @@ management_commands:
     handle_survey_actions:
   web0:
     run_sms_queue:
+  pillow0:
+    run_form_websocket_feed:
+    run_pillow_retry_queue:
 celery_processes:
   None:
     repeat_record_queue:
