--- a/environments/india/app-processes.yml
+++ b/environments/india/app-processes.yml
@@ -6,6 +6,9 @@ management_commands:
     queue_schedule_instances:
     handle_survey_actions:
     run_sms_queue:
+  pillow2:
+    run_form_websocket_feed:
+    run_pillow_retry_queue:
 celery_processes:
   celery1:
     beat: {}
