--- a/environments/swiss/app-processes.yml
+++ b/environments/swiss/app-processes.yml
@@ -2,6 +2,8 @@ formplayer_memory: "1024m"
 
 management_commands:
   swiss0:
+    run_form_websocket_feed:
+    run_pillow_retry_queue:
 celery_processes:
   swiss0:
     repeat_record_queue,celery,export_download_queue:
