--- a/src/commcare_cloud/ansible/deploy_commcarehq.yml
+++ b/src/commcare_cloud/ansible/deploy_commcarehq.yml
@@ -69,6 +69,12 @@
     - include_tasks: roles/commcarehq/tasks/airflow.yml
       tags: services
 
+- name: Management Command Supervisor Config
+  hosts: commcarehq
+  tasks:
+    - include_tasks: roles/commcarehq/tasks/management_commands.yml
+      tags: services
+
 # https://stackoverflow.com/a/30372407
 - name: Remove old supervisor files
   hosts:
@@ -79,7 +85,7 @@
     - webworkers
   tasks:
     - set_fact:
-        supervisor_files: "{{ celery_managed_files|default([]) + pillowtop_managed_files|default([]) + proxy_managed_files|default([]) + webworker_managed_files|default([]) + airflow_managed_files|default([]) + formplayer_managed_files|default([]) }}"
+        supervisor_files: "{{ celery_managed_files|default([]) + pillowtop_managed_files|default([]) + proxy_managed_files|default([]) + webworker_managed_files|default([]) + airflow_managed_files|default([]) + formplayer_managed_files|default([]) + mgmt_cmd_managed_files|default([]) }}"
       tags: services
     - shell: find {{ service_home|quote }} -type f
       register: contents
