--- a/src/commcare_cloud/ansible/roles/nginx/vars/cas_ssl.yml
+++ b/src/commcare_cloud/ansible/roles/nginx/vars/cas_ssl.yml
@@ -105,7 +105,7 @@ nginx_sites:
            burst: 100
            nodelay: True
      - name: "/a/icds-cas/receiver/logs"
-       return: >
+       return: >-
           201 '<OpenRosaResponse xmlns="http://openrosa.org/http/response"><message nature="submit_success">ignored</message></OpenRosaResponse>'
        add_header: "Content-Type application/xml"
      - name: "/a/icds-cas/receiver"
