kill run_form_websocket_feed
This is only used by 'dimagisphere'

--- a/changelog/0026-move-remaining-management-commands.yml
+++ b/changelog/0026-move-remaining-management-commands.yml
@@ -14,15 +14,13 @@ details: |
   pillowtop processes and would always be deployed onto the first host in the `pillowtop` group. From now on they
   will be deployed as configured by the `management_commands` section in `app-processes.yml`.
 
-  * run_form_websocket_feed
   * run_pillow_retry_queue
 
 update_steps: |
-  1. Add the above mentioned management commands to the `management_commands` section of `app-processes.yml`:
+  1. Add the above mentioned management command to the `management_commands` section of `app-processes.yml`:
 
   ```diff
     management_commands:
   +   pillowN:
-  +     run_form_websocket_feed:
   +     run_pillow_retry_queue:
   ```
