create virutalenv using release path not 'current'
When creating a new virutalenv with an absolute path the path
will not be resolved if it is a link. Instead virtualenv will
just use the path as is.

This break virtualenv-clone since it looks for instances of 'old_dir'
to replace with 'new_dir'. 'old_dir' is the actual path (not link) which it
does not find since the path that is in the files is the 'link' path.

--- a/src/commcare_cloud/ansible/roles/commcarehq/tasks/main.yml
+++ b/src/commcare_cloud/ansible/roles/commcarehq/tasks/main.yml
@@ -80,7 +80,7 @@
       become: true
       pip:
         requirements: "{{ code_home }}/requirements-python3/prod-requirements.txt"
-        virtualenv: "{{ py3_virtualenv_home }}"
+        virtualenv: "{{ py3_virtualenv_source }}"
         virtualenv_python: "python3.6"
         chdir: "{{ code_home }}"
       tags:
