--- a/environments/icds-cas/public.yml
+++ b/environments/icds-cas/public.yml
@@ -37,6 +37,7 @@ datadog_extra_host_checks:
   - url: "https://{{ CAS_SITE_HOST }}/accounts/login/"
 
 etc_hosts_lines:
+  - '127.0.0.1        localhost'
   - '100.71.181.10		cas.commcarehq.org'
   - '100.71.181.10		reports.icds-cas.gov.in'
   - '100.71.181.10		www.icds-cas.gov.in'
