Fix swiss backup checks

--- a/src/commcare_cloud/ansible/roles/backups/tasks/set_up_check_s3_backups.yml
+++ b/src/commcare_cloud/ansible/roles/backups/tasks/set_up_check_s3_backups.yml
@@ -12,11 +12,10 @@
   become: yes
   cron:
     name: "Check {{ service }} s3 backups"
-    job: "/usr/local/bin/check_s3_backup.py {{ service }} > {{ service_backup_dir }}/s3_backup_status.txt || { echo {{ service_backup_dir }}/s3_backup_status.txt mail -s 'Recent {{ service }} backups missing' {{ check_s3_backups_email }}; }"
+    job: "/usr/local/bin/check_s3_backup.py {{ service }} > {{ service_backup_dir }}/s3_backup_status.txt || { echo {{ service_backup_dir }}/s3_backup_status.txt | mail -s 'Recent {{ service }} backups missing' {{ check_s3_backups_email }}; }"
     state: "{{ 'present' if condition else 'absent' }}"
     minute: 0
-    hour: "{{ nadir_hour|default(0) }}"
-    weekday: "1,2,3,4,5,6"
+    hour: "0,4,8,12,16,20"
     user: "{{ user }}"
     cron_file: "backup_{{ service }}"
   tags:
