--- a/environments/production/inventory.ini
+++ b/environments/production/inventory.ini
@@ -172,6 +172,21 @@ shareddir0
 [es14]
 10.202.40.224 hostname=es14-production ufw_private_interface=eth0 elasticsearch_node_name=es14
 
+[es15]
+10.202.40.113 hostname=es15-production ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3 elasticsearch_node_name=es15
+
+[es16]
+10.202.40.81 hostname=es16-production ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3 elasticsearch_node_name=es16
+
+[es17]
+10.202.40.12 hostname=es17-production ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3 elasticsearch_node_name=es17
+
+[es18]
+10.202.40.217 hostname=es18-production ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3 elasticsearch_node_name=es18
+
+[es19]
+10.202.40.144 hostname=es19-production ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3 elasticsearch_node_name=es19
+
 [esmaster0]
 10.202.41.120 hostname=esmaster0-production ufw_private_interface=eth0 elasticsearch_node_name=esmaster0
 
@@ -181,10 +196,22 @@ shareddir0
 [esmaster2]
 10.202.40.201 hostname=esmaster2-production ufw_private_interface=eth0 elasticsearch_node_name=esmaster2
 
+[esmaster3]
+10.202.41.183 hostname=esmaster3-production ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3 elasticsearch_node_name=esmaster3
+
+[esmaster4]
+10.202.41.247 hostname=esmaster4-production ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3 elasticsearch_node_name=esmaster4
+
+[esmaster5]
+10.202.40.226 hostname=esmaster5-production ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3 elasticsearch_node_name=esmaster5
+
 [es_master:children]
 esmaster0
 esmaster1
 esmaster2
+esmaster3
+esmaster4
+esmaster5
 
 [es_master:vars]
 elasticsearch_master=true
@@ -196,6 +223,11 @@ es11
 es12
 es13
 es14
+es15
+es16
+es17
+es18
+es19
 
 [es_data:vars]
 elasticsearch_node_zone=aws
