--- a/environments/icds-cas/app-processes.yml
+++ b/environments/icds-cas/app-processes.yml
@@ -556,201 +556,89 @@ pillows:
       total_processes: 48
       processor_chunk_size: 100
   'pillow27':
-    kafka-ucr-static-cases:
+    case-pillow:
       start_process: 0
       num_processes: 9
       total_processes: 120
       processor_chunk_size: 100
-    CaseToElasticsearchPillow:
-      start_process: 0
-      num_processes: 9
-      total_processes: 120
-    case_messaging_sync_pillow:
-      start_process: 0
-      num_processes: 5
-      total_processes: 65
   'pillow28':
-    kafka-ucr-static-cases:
+    case-pillow:
       start_process: 9
       num_processes: 9
       total_processes: 120
       processor_chunk_size: 100
-    CaseToElasticsearchPillow:
-      start_process: 9
-      num_processes: 9
-      total_processes: 120
-    case_messaging_sync_pillow:
-      start_process: 5
-      num_processes: 5
-      total_processes: 65
   'pillow29':
-    kafka-ucr-static-cases:
+    case-pillow:
       start_process: 18
       num_processes: 9
       total_processes: 120
       processor_chunk_size: 100
-    CaseToElasticsearchPillow:
-      start_process: 18
-      num_processes: 9
-      total_processes: 120
-    case_messaging_sync_pillow:
-      start_process: 10
-      num_processes: 5
-      total_processes: 65
   'pillow30':
-    kafka-ucr-static-cases:
+    case-pillow:
       start_process: 27
       num_processes: 9
       total_processes: 120
       processor_chunk_size: 100
-    CaseToElasticsearchPillow:
-      start_process: 27
-      num_processes: 9
-      total_processes: 120
-    case_messaging_sync_pillow:
-      start_process: 15
-      num_processes: 5
-      total_processes: 65
   'pillow31':
-    kafka-ucr-static-cases:
+    case-pillow:
       start_process: 36
       num_processes: 9
       total_processes: 120
       processor_chunk_size: 100
-    CaseToElasticsearchPillow:
-      start_process: 36
-      num_processes: 9
-      total_processes: 120
-    case_messaging_sync_pillow:
-      start_process: 20
-      num_processes: 5
-      total_processes: 65
   'pillow32':
-    kafka-ucr-static-cases:
+    case-pillow:
       start_process: 45
       num_processes: 9
       total_processes: 120
       processor_chunk_size: 100
-    CaseToElasticsearchPillow:
-      start_process: 45
-      num_processes: 9
-      total_processes: 120
-    case_messaging_sync_pillow:
-      start_process: 25
-      num_processes: 5
-      total_processes: 65
   'pillow33':
-    kafka-ucr-static-cases:
+    case-pillow:
       start_process: 54
       num_processes: 9
       total_processes: 120
       processor_chunk_size: 100
-    CaseToElasticsearchPillow:
-      start_process: 54
-      num_processes: 9
-      total_processes: 120
-    case_messaging_sync_pillow:
-      start_process: 30
-      num_processes: 5
-      total_processes: 65
   'pillow34':
-    kafka-ucr-static-cases:
+    case-pillow:
       start_process: 63
       num_processes: 9
       total_processes: 120
       processor_chunk_size: 100
-    CaseToElasticsearchPillow:
-      start_process: 63
-      num_processes: 9
-      total_processes: 120
-    case_messaging_sync_pillow:
-      start_process: 35
-      num_processes: 5
-      total_processes: 65
   'pillow35':
-    kafka-ucr-static-cases:
+    case-pillow:
       start_process: 72
       num_processes: 9
       total_processes: 120
       processor_chunk_size: 100
-    CaseToElasticsearchPillow:
-      start_process: 72
-      num_processes: 9
-      total_processes: 120
-    case_messaging_sync_pillow:
-      start_process: 40
-      num_processes: 5
-      total_processes: 65
   'pillow36':
-    kafka-ucr-static-cases:
+    case-pillow:
       start_process: 81
       num_processes: 9
       total_processes: 120
       processor_chunk_size: 100
-    CaseToElasticsearchPillow:
-      start_process: 81
-      num_processes: 9
-      total_processes: 120
-    case_messaging_sync_pillow:
-      start_process: 45
-      num_processes: 4
-      total_processes: 65
   'pillow37':
-    kafka-ucr-static-cases:
+    case-pillow:
       start_process: 90
       num_processes: 9
       total_processes: 120
       processor_chunk_size: 100
-    CaseToElasticsearchPillow:
-      start_process: 90
-      num_processes: 9
-      total_processes: 120
-    case_messaging_sync_pillow:
-      start_process: 49
-      num_processes: 4
-      total_processes: 65
   'pillow38':
-    kafka-ucr-static-cases:
+    case-pillow:
       start_process: 99
       num_processes: 9
       total_processes: 120
       processor_chunk_size: 100
-    CaseToElasticsearchPillow:
-      start_process: 99
-      num_processes: 9
-      total_processes: 120
-    case_messaging_sync_pillow:
-      start_process: 53
-      num_processes: 4
-      total_processes: 65
   'pillow39':
-    kafka-ucr-static-cases:
+    case-pillow:
       start_process: 108
       num_processes: 9
       total_processes: 120
       processor_chunk_size: 100
-    CaseToElasticsearchPillow:
-      start_process: 108
-      num_processes: 9
-      total_processes: 120
-    case_messaging_sync_pillow:
-      start_process: 57
-      num_processes: 4
-      total_processes: 65
   'pillow40':
-    kafka-ucr-static-cases:
+    case-pillow:
       start_process: 117
       num_processes: 3
       total_processes: 120
       processor_chunk_size: 100
-    CaseToElasticsearchPillow:
-      start_process: 117
-      num_processes: 3
-      total_processes: 120
-    case_messaging_sync_pillow:
-      start_process: 61
-      num_processes: 4
-      total_processes: 65
   'pillow41':
     FormSubmissionMetadataTrackerPillow:
       num_processes: 16
