--- a/environments/icds-cas/app-processes.yml
+++ b/environments/icds-cas/app-processes.yml
@@ -518,13 +518,10 @@ pillows:
       num_processes: 1
     UserGroupsDbKafkaPillow:
       num_processes: 1
-    UserPillow:
+    user-pillow:
       num_processes: 1
     UpdateUserSyncHistoryPillow:
       num_processes: 16
-    kafka-ucr-main:
-      num_processes: 1
-      processor_chunk_size: 100
     kafka-ucr-static-awc-location:
       num_processes: 1
       processor_chunk_size: 100
