--- a/environments/staging/public.yml
+++ b/environments/staging/public.yml
@@ -112,6 +112,7 @@ localsettings:
   STATIC_ROOT:
   STATIC_CDN: 'https://d2f60qxn5rwjxl.cloudfront.net'
   WS4REDIS_CONNECTION_HOST: "{{ groups.redis.0 }}"
+  ENABLE_NEW_TRIAL_EXPERIENCE: True
 
 # comment these two lines out to make a new rackspace machine
 commcare_cloud_root_user: ubuntu
