--- a/tests/couch_migration_config/plans/reshard/expected_couch_config.yml
+++ b/tests/couch_migration_config/plans/reshard/expected_couch_config.yml
@@ -1,8 +1,8 @@
-control_node_ip: '10.247.164.12'
+aliases:
+  couchdb@10.247.164.74: couch3
+  couchdb@10.247.164.75: couch5
+  couchdb@10.247.164.76: couch4
+control_node_ip: 10.247.164.74
 control_node_local_port: 15986
 control_node_port: 15984
-username: 'admin'
-aliases: 
-  couchdb@10.247.164.75: 'couch5'
-  couchdb@10.247.164.74: 'couch3'
-  couchdb@10.247.164.76: 'couch4'
+username: admin
