--- a/environments/icds-cas/app-processes.yml
+++ b/environments/icds-cas/app-processes.yml
@@ -56,7 +56,7 @@ celery_processes:
     reminder_case_update_queue:
       pooling: gevent
       concurrency: 5
-      num_workers: 8
+      num_workers: 4
     reminder_queue:
       pooling: gevent
       concurrency: 5
@@ -67,7 +67,7 @@ celery_processes:
     reminder_case_update_queue:
       pooling: gevent
       concurrency: 5
-      num_workers: 8
+      num_workers: 4
     reminder_queue:
       pooling: gevent
       concurrency: 5
@@ -80,7 +80,7 @@ celery_processes:
     reminder_case_update_queue:
       pooling: gevent
       concurrency: 5
-      num_workers: 8
+      num_workers: 4
     reminder_queue:
       pooling: gevent
       concurrency: 5
@@ -95,7 +95,7 @@ celery_processes:
     reminder_case_update_queue:
       pooling: gevent
       concurrency: 5
-      num_workers: 8
+      num_workers: 4
     icds_dashboard_reports_queue:
       concurrency: 2
   'celery5':
@@ -104,7 +104,7 @@ celery_processes:
     reminder_case_update_queue:
       pooling: gevent
       concurrency: 5
-      num_workers: 8
+      num_workers: 4
     icds_dashboard_reports_queue:
       concurrency: 2
     sms_queue:
@@ -114,102 +114,62 @@ celery_processes:
   'celery6':
     ucr_indicator_queue:
       concurrency: 4
-    reminder_case_update_queue:
-      pooling: gevent
-      concurrency: 5
-      num_workers: 8
     icds_dashboard_reports_queue:
       concurrency: 2
     sms_queue:
       pooling: gevent
       concurrency: 10
       num_workers: 4
-  'celery7':
+  celery7,celery8:
+    ucr_indicator_queue:
+        concurrency: 4
+    icds_dashboard_reports_queue:
+        concurrency: 2
+    dashboard_comparison_queue:
+      concurrency: 4 
+    ucr_queue:
+      concurrency: 4       
+  celery9,celery10,celery11,celery12,celery112,celery13,celery14:
     ucr_indicator_queue:
       concurrency: 4
-    reminder_case_update_queue:
-      pooling: gevent
-      concurrency: 5
-      num_workers: 8
     icds_dashboard_reports_queue:
       concurrency: 2
-  'celery8':
-    ucr_indicator_queue:
-      concurrency: 4
-    reminder_case_update_queue:
+  celery16,celery17,celery18,celery19,celery32,celery33,celery34:
+    reminder_queue:
       pooling: gevent
       concurrency: 5
-      num_workers: 8
-    icds_dashboard_reports_queue:
+      num_workers: 2
+    sms_queue:
+      pooling: gevent
+      concurrency: 10
+      num_workers: 2
+  celery20,celery21:
+    reminder_queue:
+      pooling: gevent
+      concurrency: 5
+      num_workers: 2
+    sms_queue:
+      pooling: gevent
+      concurrency: 10
+      num_workers: 2
+    celery,export_download_queue,case_import_queue:
+      concurrency: 8
+    celery_periodic:
+       concurrency: 4  
+  celery22,celery23:
+    reminder_queue:
+      pooling: gevent
+      concurrency: 5
+      num_workers: 2
+    sms_queue:
+      pooling: gevent
+      concurrency: 10
+      num_workers: 2
+    submission_reprocessing_queue:
+       concurrency: 2
+    email_queue:
       concurrency: 2
-  'celery9':
-    ucr_indicator_queue:
-      concurrency: 4
-    reminder_case_update_queue:
-      pooling: gevent
-      concurrency: 5
-      num_workers: 8
-    icds_dashboard_reports_queue:
-      concurrency: 2
-  'celery10':
-    ucr_indicator_queue:
-      concurrency: 4
-    reminder_case_update_queue:
-      pooling: gevent
-      concurrency: 5
-      num_workers: 8
-    icds_dashboard_reports_queue:
-      concurrency: 2
-  'celery11':
-    ucr_indicator_queue:
-      concurrency: 4
-    reminder_case_update_queue:
-      pooling: gevent
-      concurrency: 5
-      num_workers: 8
-    icds_dashboard_reports_queue:
-      concurrency: 2
-  'celery12':
-    ucr_indicator_queue:
-      concurrency: 4
-    reminder_case_update_queue:
-      pooling: gevent
-      concurrency: 5
-      num_workers: 8
-    icds_dashboard_reports_queue:
-      concurrency: 2
-  'celery112':
-    ucr_indicator_queue:
-      concurrency: 4
-    reminder_case_update_queue:
-      pooling: gevent
-      concurrency: 5
-      num_workers: 6
-    icds_dashboard_reports_queue:
-      concurrency: 2
-  'celery13':
-    ucr_indicator_queue:
-      concurrency: 4
-    reminder_case_update_queue:
-      pooling: gevent
-      concurrency: 5
-      num_workers: 8
-    icds_dashboard_reports_queue:
-      concurrency: 2
-  'celery14':
-    ucr_indicator_queue:
-      concurrency: 4
-    reminder_case_update_queue:
-      pooling: gevent
-      concurrency: 5
-      num_workers: 8
-    icds_dashboard_reports_queue:
-      concurrency: 2
-  'celery16':
-    reminder_case_update_queue:
-      pooling: gevent
-      concurrency: 5
-      num_workers: 8
+  celery24,celery25:
     reminder_queue:
       pooling: gevent
       concurrency: 5
@@ -217,278 +177,49 @@ celery_processes:
     sms_queue:
       pooling: gevent
       concurrency: 10
-      num_workers: 2
-  'celery17':
-    reminder_case_update_queue:
-      pooling: gevent
-      concurrency: 5
-      num_workers: 8
-    reminder_queue:
-      pooling: gevent
-      concurrency: 5
-      num_workers: 2
-    sms_queue:
-      pooling: gevent
-      concurrency: 10
-      num_workers: 2
-  'celery18':
-    reminder_case_update_queue:
-      pooling: gevent
-      concurrency: 5
-      num_workers: 8
-    reminder_queue:
-      pooling: gevent
-      concurrency: 5
-      num_workers: 2
-    sms_queue:
-      pooling: gevent
-      concurrency: 10
-      num_workers: 2
-  'celery19':
-    reminder_case_update_queue:
-      pooling: gevent
-      concurrency: 5
-      num_workers: 8
-    reminder_queue:
-      pooling: gevent
-      concurrency: 5
-      num_workers: 2
-    sms_queue:
-      pooling: gevent
-      concurrency: 10
-      num_workers: 2
-  'celery20':
-    reminder_case_update_queue:
-      pooling: gevent
-      concurrency: 5
-      num_workers: 8
-    reminder_queue:
-      pooling: gevent
-      concurrency: 5
-      num_workers: 2
-    sms_queue:
-      pooling: gevent
-      concurrency: 10
-      num_workers: 2
-  'celery21':
-    reminder_case_update_queue:
-      pooling: gevent
-      concurrency: 5
-      num_workers: 8
-    reminder_queue:
-      pooling: gevent
-      concurrency: 5
-      num_workers: 2
-    sms_queue:
-      pooling: gevent
-      concurrency: 10
-      num_workers: 2
-  'celery22':
-    reminder_case_update_queue:
-      pooling: gevent
-      concurrency: 5
-      num_workers: 8
-    reminder_queue:
-      pooling: gevent
-      concurrency: 5
-      num_workers: 2
-    sms_queue:
-      pooling: gevent
-      concurrency: 10
-      num_workers: 2
-  'celery23':
-    reminder_case_update_queue:
-      pooling: gevent
-      concurrency: 5
-      num_workers: 8
-    reminder_queue:
-      pooling: gevent
-      concurrency: 5
-      num_workers: 2
-    sms_queue:
-      pooling: gevent
-      concurrency: 10
-      num_workers: 2
-  'celery24':
-    reminder_case_update_queue:
-      pooling: gevent
-      concurrency: 5
-      num_workers: 8
-    reminder_queue:
-      pooling: gevent
-      concurrency: 5
-      num_workers: 2
-    sms_queue:
-      pooling: gevent
-      concurrency: 10
-      num_workers: 2
-  'celery25':
-    reminder_case_update_queue:
-      pooling: gevent
-      concurrency: 5
-      num_workers: 8
-    reminder_queue:
-      pooling: gevent
-      concurrency: 5
-      num_workers: 2
-    sms_queue:
-      pooling: gevent
-      concurrency: 10
-      num_workers: 2
-  'celery26':
-    reminder_case_update_queue:
-      pooling: gevent
-      concurrency: 5
-      num_workers: 8
-    reminder_queue:
-      pooling: gevent
-      concurrency: 5
-      num_workers: 2
-    sms_queue:
-      pooling: gevent
-      concurrency: 10
-      num_workers: 2
-  'celery27':
-    reminder_case_update_queue:
-      pooling: gevent
-      concurrency: 5
-      num_workers: 8
-    reminder_queue:
-      pooling: gevent
-      concurrency: 5
-      num_workers: 2
-    sms_queue:
-      pooling: gevent
-      concurrency: 10
-      num_workers: 2
-  'celery28':
-    reminder_case_update_queue:
-      pooling: gevent
-      concurrency: 5
-      num_workers: 8
-    reminder_queue:
-      pooling: gevent
-      concurrency: 5
-      num_workers: 2
-    sms_queue:
-      pooling: gevent
-      concurrency: 10
-      num_workers: 2
-  'celery29':
-    reminder_case_update_queue:
-      pooling: gevent
-      concurrency: 5
-      num_workers: 8
-    reminder_queue:
-      pooling: gevent
-      concurrency: 5
-      num_workers: 2
-    sms_queue:
-      pooling: gevent
-      concurrency: 10
-      num_workers: 2
-  'celery30':
-    reminder_case_update_queue:
-      pooling: gevent
-      concurrency: 5
-      num_workers: 8
-    reminder_queue:
-      pooling: gevent
-      concurrency: 5
-      num_workers: 2
-    sms_queue:
-      pooling: gevent
-      concurrency: 10
-      num_workers: 2
-  'celery31':
-    reminder_case_update_queue:
-      pooling: gevent
-      concurrency: 5
-      num_workers: 8
-    reminder_queue:
-      pooling: gevent
-      concurrency: 5
-      num_workers: 2
-    sms_queue:
-      pooling: gevent
-      concurrency: 10
-      num_workers: 2
-  'celery32':
-    reminder_case_update_queue:
-      pooling: gevent
-      concurrency: 5
-      num_workers: 8
-    reminder_queue:
-      pooling: gevent
-      concurrency: 5
-      num_workers: 2
-    sms_queue:
-      pooling: gevent
-      concurrency: 10
-      num_workers: 2
-  'celery33':
-    reminder_case_update_queue:
-      pooling: gevent
-      concurrency: 5
-      num_workers: 8
-    reminder_queue:
-      pooling: gevent
-      concurrency: 5
-      num_workers: 2
-    sms_queue:
-      pooling: gevent
-      concurrency: 10
-      num_workers: 2
-  'celery34':
-    reminder_case_update_queue:
-      pooling: gevent
-      concurrency: 5
-      num_workers: 4
-    reminder_queue:
-      pooling: gevent
-      concurrency: 5
-      num_workers: 6
-    sms_queue:
-      pooling: gevent
-      concurrency: 10
-      num_workers: 2
-  'web28':
-    ucr_indicator_queue:
+      num_workers: 2    
+    reminder_rule_queue:
+        concurrency: 2
+    saved_exports_queue:
       concurrency: 3
-  'web29':
-    ucr_indicator_queue:
-      concurrency: 4
-  'web30':
-    ucr_indicator_queue:
-      concurrency: 4
-  'web31':
-    ucr_indicator_queue:
-      concurrency: 4
-  'web32':
-    ucr_indicator_queue:
-      concurrency: 4
-  'web33':
-    ucr_indicator_queue:
-      concurrency: 4
-  'web34':
-    ucr_indicator_queue:
-      concurrency: 4
-  'web35':
-    ucr_indicator_queue:
-      concurrency: 4
-  'web36':
-    ucr_indicator_queue:
-      concurrency: 4
-  'web37':
-    ucr_indicator_queue:
-      concurrency: 4
-  'web38':
-    ucr_indicator_queue:
-      concurrency: 4
-  'web39':
-    ucr_indicator_queue:
-      concurrency: 4
-  'web40':
+      optimize: True
+  celery26,celery27:
+    reminder_queue:
+      pooling: gevent
+      concurrency: 5
+      num_workers: 2
+    sms_queue:
+      pooling: gevent
+      concurrency: 10
+      num_workers: 2  
+    case_rule_queue:
+      concurrency: 2
+    sumologic_logs_queue:
+      pooling: gevent
+      concurrency: 8
+  celery28,celery29:
+    reminder_queue:
+      pooling: gevent
+      concurrency: 5
+      num_workers: 2
+    sms_queue:
+      pooling: gevent
+      concurrency: 10
+      num_workers: 2
+    background_queue,analytics_queue:
+      concurrency: 6
+  celery30,celery31:
+    reminder_queue:
+      pooling: gevent
+      concurrency: 5
+      num_workers: 2
+    sms_queue:
+      pooling: gevent
+      concurrency: 10
+      num_workers: 2
+    icds_aggregation_queue:
+      concurrency: 20                    
+  web28,web29,web30,web31,web32,web33,web34,web35,web36,web37,web38,web39,web40:
     ucr_indicator_queue:
       concurrency: 4
 pillows:
