Make production proxy admit that it is using letsencrypt

--- a/environments/production/proxy.yml
+++ b/environments/production/proxy.yml
@@ -9,8 +9,8 @@ nginx_hsts_max_age: 300 # 5 minutes
 
 nginx_max_worker_connection: 2048
 # commcarehq.org of certs
-nginx_combined_cert_value: "{{ ssl_secrets.certs.commcarehq_org }}"
-nginx_key_value: "{{ ssl_secrets.private_keys.commcarehq_org }}"
+
+letsencrypt_cchq_ssl: True
 
 nginx_block_ips:
   - '180.191.158.205'
