--- a/src/commcare_cloud/ansible/deploy_keepalived.yml
+++ b/src/commcare_cloud/ansible/deploy_keepalived.yml
@@ -3,6 +3,7 @@
   hosts: couchdb2_proxy
   become: true
   vars:
-     monit_process: "haproxy"
+     keepalived_check_process: "haproxy"
   roles:
     - role: keepalived
+      when: groups.couchdb2_proxy |length == 2 
