--- a/src/commcare_cloud/ansible/roles/keepalived/defaults/main.yml
+++ b/src/commcare_cloud/ansible/roles/keepalived/defaults/main.yml
@@ -6,12 +6,8 @@ keepalived_role: "MASTER"
 keepalived_router_id: "52"
 keepalived_shared_iface: "eth0"
 keepalived_shared_ip: "192.168.1.1"
-monit_process: "nginx"
+keepalived_check_process: "nginx"
 keepalived_priority: "200"
 keepalived_backup_priority: "100"
 script_user: "root"
 notify_script_path: "/etc/keepalived/notify_script"
-smtp_server: "smtp.gmail.com"
-sender_email: "lb-alert@dimagi.com"
-recepient_email: "tcl-server-standup@dimagi.com"
-sender_password: "{{ secrets.sender_email_pass}}"
