Use combined XForm pillow on ICDS

--- a/environments/icds-cas/app-processes.yml
+++ b/environments/icds-cas/app-processes.yml
@@ -524,35 +524,31 @@ pillows:
       num_processes: 1
       processor_chunk_size: 100
   'pillow22':
-    XFormToElasticsearchPillow:
-      num_processes: 16
   'pillow23':
-    kafka-ucr-static-forms:
+    xform-pillow:
       start_process: 0
       num_processes: 12
       total_processes: 48
       processor_chunk_size: 100
   'pillow24':
-    kafka-ucr-static-forms:
+    xform-pillow:
       start_process: 12
       num_processes: 12
       total_processes: 48
       processor_chunk_size: 100
   'pillow25':
-    kafka-ucr-static-forms:
+    xform-pillow:
       start_process: 24
       num_processes: 12
       total_processes: 48
       processor_chunk_size: 100
   'pillow26':
-    kafka-ucr-static-forms:
+    xform-pillow:
       start_process: 36
       num_processes: 12
       total_processes: 48
       processor_chunk_size: 100
   'pillow41':
-    FormSubmissionMetadataTrackerPillow:
-      num_processes: 16
   'pillow27':
     case-pillow:
       start_process: 0
