--- a/src/commcare_cloud/ansible/roles/thp/tasks/main.yml
+++ b/src/commcare_cloud/ansible/roles/thp/tasks/main.yml
@@ -35,7 +35,7 @@
     backrefs: yes
     state: present
   when: uses_grub.stat.exists
-  register: grup_updated
+  register: grub_updated
 
 - name: update grub
   command: update-grub
