--- a/src/commcare_cloud/ansible/roles/commcarehq/tasks/formplayer.yml
+++ b/src/commcare_cloud/ansible/roles/commcarehq/tasks/formplayer.yml
@@ -11,6 +11,7 @@
         TMPDIR: '{{ encrypted_tmp }}'
   tags:
     - services
+    - formplayer_deploy
   register: formplayer_files
 
 - set_fact:
