--- a/src/commcare_cloud/ansible/roles/datadog/tasks/add_integrations.yml
+++ b/src/commcare_cloud/ansible/roles/datadog/tasks/add_integrations.yml
@@ -47,6 +47,7 @@
   notify: restart datadog
   tags:
     - datadog_integrations
+    - formplayer_deploy
   when: item is defined and item.enabled
   with_items:
     - {"name": "elastic", "enabled": "{{ datadog_integration_elastic }}"}
